--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Hind+Siliguri:wght@500&family=Radio+Canada:wght@300&family=Roboto+Serif:wght@300&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
